--- a/journal/202007.md
+++ b/journal/202007.md
@@ -255,21 +255,23 @@ Commenting on Monde PR's Phase Two Propoal being approved:
 
 Attended:
 
-- Jul 2 - [Legaltech Talk #7](https://twitter.com/legal_medellin/status/1278507480570609664) - Internet. @elian talked with Legal Hackers Colombia about Fintech and cryptocurrencies in Latam. ([video](https://www.youtube.com/watch?v=7B-_0yKJzGI))
-- Jul 3 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1278478260716933120) - Internet. @elian joined the panel on blockchain governance of Decred and Dash with [@anibalcripto](https://twitter.com/anibalcripto) (Venezuelan crypto influencer), [@EzioRed](https://twitter.com/EzioRed) (editor of Cointelegraph in Spanish) and [@ernestocontrer](https://twitter.com/ernestocontrer). It was a good opportunity to connect with the Venezuelan ecosystem.
+- Jul 2 - [Legaltech Talk #7](https://twitter.com/legal_medellin/status/1278507480570609664) - Internet. @elian talked with Legal Hackers Colombia and BlockchainEx Colombia about Fintech regulation, the cryptocurrency ecosystem in Latam, challengues and opportunities for innovation. Questions from the audience were related to regulatory enviroments in Mexico, Argentina and Colombia, opportunities for collaboration and sources of education. ([video](https://www.youtube.com/watch?v=7B-_0yKJzGI))
+- Jul 3 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1278478260716933120) - Internet. @elian joined the panel on blockchain governance of Decred and Dash with [@anibalcripto](https://twitter.com/anibalcripto) (Venezuelan crypto influencer), [@EzioRed](https://twitter.com/EzioRed) (editor of Cointelegraph in Spanish) and [@ernestocontrer](https://twitter.com/ernestocontrer) (Dash Core Group BizDev). It was a good opportunity to connect with the Venezuelan ecosystem and showcase the differences between Decred and Dash.
 - Jul 8 - [Youth Entrepreneurship](https://twitter.com/in_insaf/status/1280771474966675456) - Internet. The event was organized by the Moroccan Organization of Young Decision Makers, where @arij talked about blockchain technology and how it will change the industrial sector. The presentation took one hour, plus half an hour of Q&A. At the begining there were just 16 participants but more have joined in the middle of the webinar. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200708-virtual-training-academy-internet.md))
 - Jul 9-11 - [Campus Party](https://brasil.campus-party.org/) - Internet. This was the first online Campus Party with speakers from around the world. Decred BR team had 3 talks from Clara Nobre ("[Open Source and cryptocurrencies](https://www.youtube.com/watch?v=AD84kjsS50w): uniting community and bytes that are worth gold!"), Rafaela Romano ("[Blockchain monetization](https://www.youtube.com/watch?v=m4zxnq7RJoQ): one coin for your thoughts"), and Fernando Guisso ("[Instant payments](https://www.youtube.com/watch?v=CkQaUhlPTKA) with cryptocurrencies").
-- Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined the conversation about women in crypto, software and money. The event was sponsored by Binance. ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
-- Jul 15 - [¿Segura, adaptable y sustentable?](https://twitter.com/Decred_ES/status/1283548889249992704) - Internet. Instagram Live with @adcade and lawyer Hector Ibarra to discuss Decred and cryptocurrencies.
-- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) in Spanish.
+- Jul 10 - [Cryptographic Friday](https://twitter.com/anibalcripto/status/1281194876932108288) - Internet. @adcade joined woman from crypto communities in Mexico, Chile and Venezuela, the panel discussed cryptocurrency projects, crypto culture, personal stories of how each one got started, tips on navigating the industry and some discussion of the nuances of gender in crypto. The event was sponsored by Binance and hosted by [@anibalcripto](https://twitter.com/anibalcripto) and [@EzioRed](https://twitter.com/EzioRed). ([photo](https://twitter.com/elianhuesca/status/1281729905236025345))
+- Jul 15 - [¿Segura, adaptable y sustentable?](https://twitter.com/Decred_ES/status/1283548889249992704) - Internet. Instagram Live with @adcade and lawyer Hector Ibarra to discuss cryptocurrencies and the three main characteristics of Decred: security, adaptability and sustainability. Around each characteristic explored, some paralels where drawned with current laws in Mexico, and how crypto can render them useless. Where and how to buy Decred was also examined.
+- Jul 22 - [Crypto Resources Academy](https://twitter.com/cryptorc_tech/status/1284187985366462464) - Internet. @elian talked about crypto scams, what kind of of scam sxist, how to spot them, how to prevent and a summary of the largest hacks in the cryptocurrency industry. The event was announced on [Cointelegraph](https://es.cointelegraph.com/news/theyll-be-giving-a-talk-on-preventing-crypto-scams) [Livestream on youtube](https://www.youtube.com/watch?v=IAlXrrYCYcs&t) in Spanish.
 - Jul 22-23 - [Blockchain Land](https://www.blockchain-land.tv/) - Internet. @pablito and @camilolwi were on the panel on [DAO](https://www.blockchain-land.tv/eventos/comunidades-con-codigos-el-rol-de-las-daos-en-la-blockchain-gustavo-segovia-mariano-di-pietrantonio-pablo-labarta-camilo-rodriguez/) with MakerDAO and Colony. On the following day @adcade gave a [talk](https://www.blockchain-land.tv/eventos/las-criptomonedas-son-productos-digitales-quien-las-mantiene-ana-chavez/) "Who pays for cryptocurrency development?", a 20 min segment on how to contribute to Decred. (full 12-hour [video](https://www.youtube.com/watch?v=On2zYc7BrvI), @adcade's [talk](https://www.youtube.com/watch?v=iot1tkctSRI))
-- Jul 23 - Hablemos Decred 7 - Internet. @elian and Lorena Ortiz from Bitcoin Embassy Bar talked about scams and how to prevent them. ([video](https://www.youtube.com/watch?v=lRtXgtJ7dU8))
-- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina. Decred was a sponsor.
+- Jul 23 - Hablemos Decred 7 - Internet. @elian and Lorena Ortiz from Bitcoin Embassy Bar talked about scams, how to prevent them and to store safely cryptocurrencies. ([video](https://www.youtube.com/watch?v=lRtXgtJ7dU8))
+- Jul 30 - [Descentralizar 2020](https://descentralizar.org/) - Internet. Descentralizar is a virtual event organised by Bitcoin Argentina, the largest cryptocurrency association in Argentina, gathering the community of developers, entrepreneurs, investors and general public, Decred was sponsor of the event.
 - Jul 31 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/272243922/) - Internet. eSizeDave, Checkmate and Zohand hosted this event in Zoom and updated the community on Decred's latest developments, upcoming releases, general market analysis and insights from Decred's latest on-chain analytics findings.
 
 Upcoming:
 
-- { any? }
+- Aug 5 - [bslSeminario](https://twitter.com/BlockSummitLA/status/1291139431089414144) - Internet. @elian joined [@cristpereirag](https://twitter.com/cristpereirag) and [@ernestocontrer](https://twitter.com/ernestocontrer) (Dash Core Group BizDev) to discuss blockchain governance of Decred and comparisons to Dash, mechanics of Decred Treasury, Politeia and the process to submit proposals. 
+- Aug 6 - [#HablemosDecred 7](https://twitter.com/Decred_ES/status/1288633074050306052) - Internet. In this edition we will talk about cryptocurrencies and commerce, particularly in Venezuela, with José Manuel da Silva from [criptolugares.com](https://www.criptolugares.io/) to learn more about the prospects of adoption from a Medium of Exchange perspective.
+
 
 ## Media
 
@@ -352,21 +354,21 @@ https://www.zerohedge.com/markets/bitcoin-hits-1-year-high-then-plummets-after-s
 
 {cc tech: PoW, ASIC resistance, full nodes, cc network security, etc}
 
-Clourflare suffered an issue which took down many of the sites which rely on it, the [effect](https://cointelegraph.com/news/cloudflare-outage-shows-crypto-holders-are-not-that-decentralized) could be [seen](https://twitter.com/lopp/status/1284275353389862914) on Bitcoin transaction volume, presumably because transactions from web wallets that rely on Cloudflare were not possible.
+{ Cloudflare outage https://cointelegraph.com/news/cloudflare-outage-shows-crypto-holders-are-not-that-decentralized }
 
 {governance, funding, chain forks, community forks}
 
-More than 75 companies in the blockchain and cryptocurrency industry don't mind taking U.S. government backed payroll [loans](https://www.coindesk.com/consensys-polychain-tron-ciphertrace-blockchain-startups-got-18m-in-us-ppp-bailout-loans). These include such well known (and funded) outfits as Consensys (Ethereum) and the Electronic Coin Company (Zcash) - which already enjoys 20% of the ZEC rewards. Opinions are split between those who think taking government-sponsored loans is at odds with cryptocurrency ideals, and those who think they'll be disadvantaged if they refrain while others help themselves. This demonstrates that even a well-subscribed ICO or ongoing 20% block rewards are not guarantees of a secure and sustainable funding situation, it is also necessary to manage spending and if possible establish some reserves.
+More than 75 companies in the blockchain and cryptocurrency industry don't mind taking U.S. government backed payroll [loans](https://www.coindesk.com/consensys-polychain-tron-ciphertrace-blockchain-startups-got-18m-in-us-ppp-bailout-loans). These include such well known (and funded) outfits as Consensys (Ethereum) and the Electronic Coin Company (Zcash) - which already enjoys 20% of the ZEC rewards. Opinions are split between those who think taking government-sponsored loans is at odds with cryptocurrency ideals, and those who think they'll be disadvantaged if they refrain while others help themselves. This demonstrates that even a well-subscribed ICO or ongoing 20% block rewards are not guarantees of a secure and sustainable funding situation.
 
-Josh Concinnati [announced](https://twitter.com/acityinohio/status/1289223795903881216) he is resigning his position as Executive Director of the Zcash Foundation. The tweeted "letter" of resignation cites principles like "In open systems, those who help architect process which grant their organizations power should refuse to wield it" (Josh was involved in securing future ZEC block rewards for the Foundation, which only has a stipend from ECC in the current arrangement). The letter also indicates that a major reason for Josh's departure is the that his relationship with the ECC and capacity to work with them was irreparably damaged during the trademark dispute which formed part of the negotiations about Zcash development funding after the initial period of 20% for ECC ends.
+Josh Concinnati [announced](https://twitter.com/acityinohio/status/1289223795903881216) he is resigning his position as Executive Director of the Zcash Foundation. The tweeted "letter" of resignation cites principles like "In open systems, those who help architect process which grant their organizations power should refuse to wield it" (Josh was involved in securing future ZEC block rewards for the Foundation). The letter also indicates that a major reason is the that his relationship with the ECC and capacity to work with them was irreparably damaged during the trademark dispute which formed part of the negotiations about Zcash development funding after the initial period of 20% for ECC ends.
 
-Reddit's "great scaling bake-off" (about scaling reddit's use of Ethereum) attracted considerable attention and many [contributions](https://www.reddit.com/r/ethfinance/comments/hbjyd3/the_great_reddit_scaling_bakeoff/), entries are being assessed in August.
 
-Someone is [complaining](https://medium.com/coinmonks/a-primer-on-ethereum-social-governance-fde47d678de9) about Ethereum's social governance processes on platforms like twitter which the developers do not pay attention to, and calling for an all-in-one Ethereum governance platform.
+
+{ social governance experiment for Ethereans Discord https://twitter.com/TheEther2077 }
 
 {DEX}
 
-Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b) which exploited a protocol bug to print RVN without limit, outside the issuance schedule. The attack was enabled by a one-time pull request from a developer with no other history, and exploited some time after being merged into production releases of the Ravencoin software. Once the vulnerability was announced and the fix released, new attackers emerged to exploit it while the network rushed to update enough miners within the first activation window. Much of the RVN minted by these new attackers was subsequently burned, as at least one of them revealed some personally identifiable information, and the lead Ravencoin developer threatened to (and in fact did) involve law enforcement. The attack was running for some time, minting RVN regularly, mixing it up and selling it - 4% of all the RVN in circulation now was created (and sold) in this manner. As this extra RVN was outside the planned issuance, the RavenCoin community must now decide how to accommodate the extra RVN within the planned issuance limit. The subject was also covered by @BlockCommons on [twitter](https://twitter.com/BlockCommons/status/1281930933889896449).
+Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b) which exploited a protocol bug to print RVN without limit, outside the issuance schedule. The attack was enabled by a one-time pull request from a developer with no other history, and exploited some time after being merged into production releases of the Ravencoin software. Once the vulnerability was announced and the fix released, new attackers emerged to exploit it while the network rushed to update enough miners within the first activation window. Much of the RVN minted by these new attackers was subsequently burned, as at least one of them revealed some personally identifiable information, and the lead Ravencoin developer threatened to (and in fact did) involve law enforcement. The attack was running for some time, minting RVN regularly, mixing it up and selling it - 4% of all the RVN in circulation now as created (and sold) in this manner. As this extra RVN was outside the planned issuance, the RavenCoin community must now decide how to accommodate the extra RVN within the planned issuance limit. The subject was also covered by @BlockCommons on [twitter](https://twitter.com/BlockCommons/status/1281930933889896449).
 
 When twitter was [hacked](https://www.nytimes.com/2020/07/31/technology/twitter-hack-arrest.html) to circulate a Bitcoin scam, thousands of people rushed to send Elon, Barrack and Kanye their BTC - in the expectation that these celebrities were going to double it for them. Coinbase [prevented](https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers) over 1,000 of their customers from making these transactions, demonstrating that perhaps some people might be better off not controlling their own keys.
 
@@ -376,15 +378,13 @@ Hardware wallet producer Ledger [announced](https://twitter.com/Ledger/status/12
 
 {relevant exchanges and websites}
 
-Someone is [impersonating]( https://cointelegraph.com/news/cointelegraph-cracks-down-on-staff-imposters-investigation-on-the-way) Cointelegraph journalists to scam people, by offering to write stories for payment.
+{ new form of impersonation scam, beware https://cointelegraph.com/news/cointelegraph-cracks-down-on-staff-imposters-investigation-on-the-way }
 
 {other: regulations, privacy, security, fun}
 
 Russia is catching up on regulating crypto with the first [bill](https://cointelegraph.com/news/russian-lawmakers-finally-pass-countrys-major-crypto-bill) giving crypto a legal status but banning its use as a a payment method.
 
 { A new epic anti-encryption bill was proposed to U.S. senate https://cyberlaw.stanford.edu/blog/2020/06/there%E2%80%99s-now-even-worse-anti-encryption-bill-earn-it-doesn%E2%80%99t-make-earn-it-bill-ok }
-
-A new anti-encryption [bill](https://cyberlaw.stanford.edu/blog/2020/06/there%E2%80%99s-now-even-worse-anti-encryption-bill-earn-it-doesn%E2%80%99t-make-earn-it-bill-ok) was introduced in the U.S. Senate, which would make law enforcement backdoors mandatory and forbid any offers of end-to-end encryption services.
 
 ## About This Issue
 
