--- a/journal/202106.md
+++ b/journal/202106.md
@@ -310,15 +310,16 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom={t1}-{t2}&axis=time&visibility=true-true&mode=stepped) varied between {n.n}-{n.n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+**Staking**: [Ticket price](https://explorer.decred.org/charts?chart=ticket-price&zoom=kpb32srm-kqn8vbkn&bin=window&axis=time&visibility=true-true) varied between 168.1-208.14 DCR, with 30-day [average](https://dcrstats.com/) at 184.72 DCR (-1.02).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time
+) was 7.33-7.72 million DCR, meaning that 56.1-59% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kpb32srm-kqn8vbkn&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 { recap of ticket price action if it was interesting }
 
-**VSP**: On {}, {} (+{}) live tickets were managed by vspd servers and {} (-{}) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool.
+**VSP**: On {}, {} (+{}) live tickets were managed by vspd servers and {} (-{}) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool. {How to do this ?}
 
-**Nodes**: Throughout June there were around {n} reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
+**Nodes**: Throughout June there were around 216.23 reachable nodes according to [dcrextdata](https://analytics.planetdecred.org/nodes).
 
 Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z - n%, ... }
 
